--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF8"/>
 <link rel="stylesheet" type="text/css" href="walking.css">
-<script src="walking.js"></script>
+<script type="module" src="walking.js"></script>
 </head>
 <body >
 
