Add pause button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
 <canvas id="game"></canvas>
 
-<p>sample text</p>
+<div>
+    <button id="pauseButton">Toggle Pause</button>
+    <p>sample text</p>
+</div>
 
 </body>
 </html>
