Add stepButton to step one frame while paused

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <div>
     <button id="pauseButton">Toggle Pause</button>
+    <button id="stepButton">Step</button>
     <p>sample text</p>
 </div>
 
