--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <div>
     <button id="pauseButton">Toggle Pause</button>
     <button id="stepButton">Step</button>
+    <input type="range" min="1" max="30" value="25" step="1" id="FPSSlider">
     <p>sample text</p>
 </div>
 
