Add ability to turn off speed limiting

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <button id="pauseButton">Toggle Pause</button>
     <button id="stepButton">Step</button>
     <input type="range" min="1" max="30" value="25" step="1" id="FPSSlider">
+    <input type="checkbox" id="speedLimitCheckbox" checked>
+    <label for="speedLimitCheckbox"> Limit speed</label>
     <p>sample text</p>
 </div>
 
