Plot distances in a plot.ly graph

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF8"/>
 <link rel="stylesheet" type="text/css" href="walking.css">
 <script type="module" src="walking.js"></script>
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 <body >
 
@@ -17,6 +18,8 @@
     <label for="speedLimitCheckbox"> Limit speed</label>
     <p>sample text</p>
 </div>
+
+<div id="distancesPlot" style="width:640px;height:400px;"></div>
 
 </body>
 </html>
