--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body >
 
-<canvas id="game"></canvas>
+<div id="gamediv"></div>
 
 <div>
     <button id="pauseButton">Toggle Pause</button>
