Make canvas and distanceplot more responsive

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </div>
 
 <div class="container">
-    <div id="distancesPlot" style="width:640px;height:400px;"></div>
+    <div id="distancesPlot" style="max-width:640px;max-height:400px;width:100%"></div>
     <div class="regularsize placeholder container"><p>place holder content 1</p></div>
     <div class="regularsize placeholder container"><p>place holder content 2</p></div>
     <div class="regularsize placeholder container"><p>place holder content 3</p></div>
